--- a/examples/kafka/Dockerfile
+++ b/examples/kafka/Dockerfile
@@ -5,7 +5,7 @@
 FROM datadog/docker-dd-agent
 
 # Install Kafka check dependencies
-RUN apt-get install openjdk-7-jre-headless python-setuptools -y
+RUN apt-get install openjdk-7-jre-headless python-setuptools -qq --no-install-recommends
 RUN easy_install kazoo
 
 # Add Kafka check configuration
