--- a/examples/mysql/Dockerfile
+++ b/examples/mysql/Dockerfile
@@ -5,7 +5,7 @@
 FROM datadog/docker-dd-agent
 
 # Install check dependencies
-RUN apt-get install python-mysqldb -y
+RUN apt-get install python-mysqldb -qq --no-install-recommends
 
 # Add MySQL check configuration
 ADD mysql.yaml /etc/dd-agent/conf.d/mysql.yaml
