Fix doc and examples with Agent 5.0

--- a/examples/kafka/Dockerfile
+++ b/examples/kafka/Dockerfile
@@ -4,9 +4,9 @@
 
 FROM datadog/docker-dd-agent
 
-# Install Kafka check dependencies
-RUN apt-get install openjdk-7-jre-headless python-setuptools -qq --no-install-recommends
-RUN easy_install kazoo
+# Install JMXFetch dependencies
+RUN apt-get install openjdk-7-jre-headless -qq --no-install-recommends
 
 # Add Kafka check configuration
 ADD kafka.yaml /etc/dd-agent/conf.d/kafka.yaml
+
