--- a/examples/mysql/Dockerfile
+++ b/examples/mysql/Dockerfile
@@ -1,11 +1,8 @@
-# Example - Simple
+# Example - MySQL
 #
-# Run a raw Agent, only reporting system metrics
+# Agent running a MySQL check
 
 FROM datadog/docker-dd-agent
-
-# Install check dependencies
-RUN apt-get install python-mysqldb -qq --no-install-recommends
 
 # Add MySQL check configuration
 ADD mysql.yaml /etc/dd-agent/conf.d/mysql.yaml
