--- a/examples/apache/apache.yaml
+++ b/examples/apache/apache.yaml
@@ -1,7 +1,7 @@
 init_config:
 
 instances:
-    -   apache_status_url: http://example.com/server-status?auto
+    -   apache_status_url: http://172.17.42.1/server-status?auto
         # apache_user: example_user
         # apache_password: example_password
         tags:
