--- a/conf.d/docker_daemon.yaml
+++ b/conf.d/docker_daemon.yaml
@@ -35,7 +35,7 @@ instances:
     # Create events whenever a container status change.
     # Defaults to true.
     #
-    # collect_events: false
+    collect_events: true
 
     # Collect disk usage per container with docker.container.size_rw and
     # docker.container.size_rootfs metrics.
@@ -43,20 +43,20 @@ instances:
     # ensure that `docker ps -a -q` run fast before enabling it.
     # Defaults to false.
     #
-    # collect_container_size: false
+    collect_container_size: true
 
     # Collect images stats
     # Number of available active images and intermediate images as gauges.
     # Defaults to false.
     #
-    # collect_images_stats: false
+    collect_images_stats: false
 
     # Collect disk usage per image with docker.image.size and docker.image.virtual_size metrics.
     # The check gets this size with the `docker images` command.
     # Requires collect_images_stats to be enabled.
     # Defaults to false.
     #
-    # collect_image_size: false
+    collect_image_size: false
 
 
     # Exclude containers based on their tags
@@ -107,7 +107,7 @@ instances:
     # Tags for containers count metrics.
     # Available: ["image_name", "image_tag", "docker_image", "container_command"]
     #
-    # container_tags: ["image_name", "image_tag", "docker_image"]
+    container_tags: ["image_name", "image_tag", "container_name"]
 
     # List of container label names that should be collected and sent as tags.
     # Default to None
