Add comment out use_histogram

--- a/conf.d/kubernetes.yaml
+++ b/conf.d/kubernetes.yaml
@@ -20,7 +20,7 @@ instances:
   # to keep them unique.
   # When true, we aggregate data based on container image.
   #
-   use_histogram: True
+  # use_histogram: True
   #
   # kubelet_port: 10255
   #
