--- a/alpine/examples/kafka/Dockerfile
+++ b/alpine/examples/kafka/Dockerfile
@@ -5,8 +5,7 @@
 FROM datadog/docker-dd-agent
 
 # Install JMXFetch dependencies
-RUN apt-get update -qq && apt-get install openjdk-7-jre-headless -y -qq --no-install-recommends
+RUN apk add --update openjdk7-jre
 
 # Add Kafka check configuration
 ADD kafka.yaml /etc/dd-agent/conf.d/kafka.yaml
-
