--- a/conf.d/docker_daemon.yaml
+++ b/conf.d/docker_daemon.yaml
@@ -58,6 +58,16 @@ instances:
     #
     # collect_image_size: false
 
+    # Collect disk metrics (total, used, free) through the docker info command for data and metadata.
+    # This is useful when these values can't be obtained by the disk check.
+    # Example: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-optimized_AMI.html
+    # Note that it only works when the storage driver is devicemapper.
+    # Explanation of these metrics can be found here:
+    # https://github.com/docker/docker/blob/v1.11.1/daemon/graphdriver/devmapper/README.md
+    # Defaults to false.
+    #
+    # collect_disk_stats: true
+
 
     # Exclude containers based on their tags
     # An excluded container will be completely ignored. The rule is a regex on the tags.
@@ -101,6 +111,7 @@ instances:
     #   - docker_image: LEGACY. The full image name:tag string (example: "nginx:latest")
     #   - container_name: Name of the container (example: "boring_euclid")
     #   - container_command: Command ran by the container (example: "echo 1")
+    #   - container_id: Id of the container
     #
     # performance_tags: ["container_name", image_name", "image_tag", "docker_image"]
 
@@ -112,4 +123,4 @@ instances:
     # List of container label names that should be collected and sent as tags.
     # Default to None
     # Example:
-    # collect_labels_as_tags: ["com.docker.compose.service", "com.docker.compose.project"] 
+    # collect_labels_as_tags: ["com.docker.compose.service", "com.docker.compose.project"]
