--- a/dogstatsd/alpine/Dockerfile
+++ b/dogstatsd/alpine/Dockerfile
@@ -4,9 +4,9 @@ MAINTAINER Datadog <package@datadoghq.com>
 
 ENV DD_HOME=/opt/datadog-agent \
     DOCKER_DD_AGENT=yes \
-    AGENT_VERSION=5.8.5 \
     # prevent the agent from being started after install
-    DD_START_AGENT=0
+    DD_START_AGENT=0 \
+    AGENT_VERSION=5.8.5
 
 # Add install and config files
 ADD https://raw.githubusercontent.com/DataDog/dd-agent/$AGENT_VERSION/packaging/datadog-agent/source/setup_agent.sh /tmp/setup_agent.sh
