--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -6,8 +6,8 @@ ENV DD_HOME=/opt/datadog-agent \
     # prevent the agent from being started after install
     DD_START_AGENT=0 \
     DOCKER_DD_AGENT=yes \
+    PYCURL_SSL_LIBRARY=openssl \
     AGENT_VERSION=5.11.0
-    PYCURL_SSL_LIBRARY=openssl
 
 # Add Docker check
 COPY conf.d/docker_daemon.yaml "$DD_HOME/agent/conf.d/docker_daemon.yaml"
