--- a/dogstatsd/Dockerfile
+++ b/dogstatsd/Dockerfile
@@ -24,8 +24,8 @@ RUN mv /etc/dd-agent/datadog.conf.example /etc/dd-agent/datadog.conf \
  && sed -i -e"s/^.*log_to_syslog:.*$/log_to_syslog: no/" /etc/dd-agent/datadog.conf \
  && mv /supervisor.conf /etc/dd-agent/supervisor.conf
 
-# Expose supervisor and DogStatsD port
-EXPOSE 9001/tcp 8125/udp
+# Expose supervisor, DogStatsD and trace-agent port
+EXPOSE 9001/tcp 8125/udp 8126/tcp
 
 # Set proper permissions to allow running as a non-root user
 RUN chmod g+w /etc/dd-agent/datadog.conf \
