Fix "x509: failed to load system roots and no roots provided" when tracer agent tries to flush the payload to DD service

--- a/dogstatsd/Dockerfile
+++ b/dogstatsd/Dockerfile
@@ -11,7 +11,7 @@ COPY entrypoint.sh supervisor.conf /
 RUN echo "deb http://apt.datadoghq.com/ stable main" > /etc/apt/sources.list.d/datadog.list \
  && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C7A7DA52 \
  && apt-get update \
- && apt-get install --no-install-recommends -y datadog-agent="${AGENT_VERSION}" \
+ && apt-get install --no-install-recommends -y datadog-agent="${AGENT_VERSION}" ca-certificates \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
