--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,7 +1,7 @@
 FROM debian:jessie
 
 MAINTAINER Datadog <package@datadoghq.com>
-
+ENV test=itsme
 ENV DOCKER_DD_AGENT=yes \
     AGENT_VERSION=1:5.16.0-1
 
