--- a/Dockerfile-jmx
+++ b/Dockerfile-jmx
@@ -3,7 +3,14 @@ FROM debian:jessie
 MAINTAINER Datadog <package@datadoghq.com>
 
 ENV DOCKER_DD_AGENT=yes \
-    AGENT_VERSION=1:5.16.0-1
+    AGENT_VERSION=1:5.16.0-1 \
+    DD_ETC_ROOT=/etc/dd-agent \
+    PATH="/opt/datadog-agent/embedded/bin:/opt/datadog-agent/bin:${PATH}" \
+    PYTHONPATH=/opt/datadog-agent/agent \
+    DD_CONF_SD_JMX_ENABLE=yes \
+    DD_CONF_LOG_TO_SYSLOG=no \
+    NON_LOCAL_TRAFFIC=yes \
+    DD_SUPERVISOR_DELETE_USER=yes
 
 # Install the Agent
 RUN echo "deb http://apt.datadoghq.com/ stable main" > /etc/apt/sources.list.d/datadog.list \
@@ -15,25 +22,16 @@ RUN echo "deb http://apt.datadoghq.com/ stable main" > /etc/apt/sources.list.d/d
  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Configure the Agent
-# 1. Listen to statsd from other containers
-# 2. Turn syslog off
-# 3. Enable Service Discovery with JMXFetch
-# 4. Remove dd-agent user from supervisor configuration
-# 5. Remove dd-agent user from init.d configuration
-# 6. Fix permission on /etc/init.d/datadog-agent
-RUN mv /etc/dd-agent/datadog.conf.example /etc/dd-agent/datadog.conf \
- && sed -i -e"s/^.*non_local_traffic:.*$/non_local_traffic: yes/" /etc/dd-agent/datadog.conf \
- && sed -i -e"s/^.*log_to_syslog:.*$/log_to_syslog: no/" /etc/dd-agent/datadog.conf \
- && sed -i -e"s/^.*sd_jmx_enable:.*$/sd_jmx_enable: yes/" /etc/dd-agent/datadog.conf \
- && sed -i "/user=dd-agent/d" /etc/dd-agent/supervisor.conf \
+RUN mv ${DD_ETC_ROOT}/datadog.conf.example ${DD_ETC_ROOT}/datadog.conf \
  && sed -i 's/AGENTUSER="dd-agent"/AGENTUSER="root"/g' /etc/init.d/datadog-agent \
- && rm /etc/dd-agent/conf.d/network.yaml.default \
- || chmod +x /etc/init.d/datadog-agent
+ && rm -f ${DD_ETC_ROOT}/conf.d/network.yaml.default \
+ && chmod +x /etc/init.d/datadog-agent
 
-# Add Docker check
-COPY conf.d/docker_daemon.yaml /etc/dd-agent/conf.d/docker_daemon.yaml
-
-COPY entrypoint.sh /entrypoint.sh
+# Add Docker check                                  
+COPY conf.d/docker_daemon.yaml ${DD_ETC_ROOT}/conf.d/docker_daemon.yaml                                  
+# Add install and config files                      
+COPY entrypoint.sh /entrypoint.sh                   
+COPY config_builder.py /config_builder.py
 
 # Extra conf.d and checks.d
 VOLUME ["/conf.d", "/checks.d"]
@@ -44,7 +42,7 @@ EXPOSE 8125/udp 9001/tcp
 # Healthcheck
 HEALTHCHECK --interval=5m --timeout=3s --retries=1 \
   CMD test $(/opt/datadog-agent/embedded/bin/python /opt/datadog-agent/bin/supervisorctl \
-      -c /etc/dd-agent/supervisor.conf status | awk '{print $2}' | egrep -v 'RUNNING|EXITED' | wc -l) \
+      -c ${DD_ETC_ROOT}/supervisor.conf status | awk '{print $2}' | egrep -v 'RUNNING|EXITED' | wc -l) \
       -eq 0 || exit 1
 
 ENTRYPOINT ["/entrypoint.sh"]
