--- a/Dockerfile-dogstatsd
+++ b/Dockerfile-dogstatsd
@@ -16,7 +16,7 @@ RUN echo "deb http://apt.datadoghq.com/ stable main" > /etc/apt/sources.list.d/d
  && apt-get update \
  && apt-get install --no-install-recommends -y datadog-agent="${AGENT_VERSION}" ca-certificates \
  && apt-get clean \
- && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
+ && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Add install and config files
 COPY entrypoint-dogstatsd.sh /entrypoint.sh
