--- a/examples/kafka/Dockerfile
+++ b/examples/kafka/Dockerfile
@@ -2,10 +2,7 @@
 #
 # Agent running a Kafka check
 
-FROM datadog/docker-dd-agent
-
-# Install JMXFetch dependencies
-RUN apt-get update -qq && apt-get install openjdk-7-jre-headless -y -qq --no-install-recommends
+FROM datadog/docker-dd-agent:latest-jmx
 
 # Add Kafka check configuration
 ADD kafka.yaml /etc/dd-agent/conf.d/kafka.yaml
