--- a/Dockerfile-dogstatsd
+++ b/Dockerfile-dogstatsd
@@ -23,21 +23,23 @@ COPY entrypoint-dogstatsd.sh /entrypoint.sh
 COPY dogstatsd/supervisor.conf /etc/dd-agent/supervisor.conf
 COPY config_builder.py /config_builder.py
 
+# Add healthcheck script
+COPY probe.sh /probe.sh
+
 RUN mv /etc/dd-agent/datadog.conf.example /etc/dd-agent/datadog.conf \
  # Set proper permissions to allow running as a non-root user
  && chmod g+w /etc/dd-agent/datadog.conf \
  && chmod -R g+w /var/log/datadog \
  && chmod g+w /etc/dd-agent \
- && chmod g+w /opt/datadog-agent/run/
+ && chmod g+w /opt/datadog-agent/run/ \
+ && chmod g+x /probe.sh
 
 # Expose supervisor, DogStatsD and trace-agent port
 EXPOSE 9001/tcp 8125/udp 8126/tcp
 
 # Healthcheck
 HEALTHCHECK --interval=5m --timeout=3s --retries=1 \
-  CMD test $(/opt/datadog-agent/embedded/bin/python /opt/datadog-agent/bin/supervisorctl \
-      -c /etc/dd-agent/supervisor.conf status | awk '{print $2}' | egrep -v 'RUNNING|EXITED' | wc -l) \
-      -eq 0 || exit 1
+  CMD ./probe.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
 
