--- a/Dockerfile-jmx
+++ b/Dockerfile-jmx
@@ -40,8 +40,8 @@ COPY config_builder.py /config_builder.py
 # Extra conf.d and checks.d
 VOLUME ["/conf.d", "/checks.d"]
 
-# Expose DogStatsD and supervisord ports
-EXPOSE 8125/udp 9001/tcp
+# Expose DogStatsD port
+EXPOSE 8125/udp
 
 # Healthcheck
 HEALTHCHECK --interval=5m --timeout=3s --retries=1 \
