fix mounts in systemd unit

--- a/dd-agent.service
+++ b/dd-agent.service
@@ -17,7 +17,7 @@ ExecStart=/bin/bash -c " \
   docker run --name dd-agent \
     -h %H \
     -v /var/run/docker.sock:/var/run/docker.sock \
-    -v /proc/mounts:/host/proc/mounts:ro \
+    -v /proc/:/host/proc:ro \
     -v /sys/fs/cgroup/:/host/sys/fs/cgroup:ro \
     -e API_KEY=`etcdctl get /datadog/apikey` \
     -e TAGS=\"os-name:$NAME,os-version:$VERSION,machine-id:%m$metadata\" \
