[dockerfiles][alping] make builds configurable

--- a/Dockerfile-dogstatsd-alpine
+++ b/Dockerfile-dogstatsd-alpine
@@ -2,11 +2,13 @@ FROM alpine:3.6
 
 MAINTAINER Datadog <package@datadoghq.com>
 
+ARG AGENT_VERSION_ARG=5.26.0
+
 ENV DD_HOME=/opt/datadog-agent \
     DOCKER_DD_AGENT=yes \
     # prevent the agent from being started after install
     DD_START_AGENT=0 \
-    AGENT_VERSION=5.26.0 \
+    AGENT_VERSION=$AGENT_VERSION_ARG \
     DD_ETC_ROOT="/opt/datadog-agent/agent" \
     PATH="/opt/datadog-agent/venv/bin:/opt/datadog-agent/agent/bin:$PATH" \
     PYTHONPATH=/opt/datadog-agent/agent \
