--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -2,12 +2,14 @@ FROM alpine:3.6
 
 MAINTAINER Datadog <package@datadoghq.com>
 
+ARG AGENT_VERSION_ARG=5.26.0
+
 ENV DD_HOME=/opt/datadog-agent \
     # prevent the agent from being started after install
     DD_START_AGENT=0 \
     DOCKER_DD_AGENT=yes \
     PYCURL_SSL_LIBRARY=openssl \
-    AGENT_VERSION=5.26.0 \
+    AGENT_VERSION=$AGENT_VERSION_ARG \
     DD_ETC_ROOT="/opt/datadog-agent/agent" \
     PATH="/opt/datadog-agent/venv/bin:/opt/datadog-agent/agent/bin:$PATH" \
     PYTHONPATH="/opt/datadog-agent/agent" \
